<resources>
    <!-- Metadata -->
    <string name="app_name">Selene</string>

    <!-- Header -->
    <string name="greeting">Hi %1$s</string>
    <string name="italian_flag">Italian flag</string>
    <string name="english_flag">English flag</string>
    <string name="polish_flag">Polish flag</string>

    <!-- Footer -->
    <string name="graph_page">Graph page</string>
    <string name="study_page">Study page</string>

    <!-- Startup -->
    <string name="descrizione_app">Track your focus and pause at the best moment!</string>
    <string name="hint_startup">Insert your name</string>
    <string name="button_startup">Start.</string>

    <!-- Graph -->
    <string name="title_today">Daily mental workload [Today]</string>
    <string name="title_yesterday">Daily mental workload [Yesterday]</string>
    <string name="title_monday">Daily mental workload [Monday]</string>
    <string name="title_tuesday">Daily mental workload [Tuesday]</string>
    <string name="title_wednesday">Daily mental workload [Wednesday]</string>
    <string name="title_thursday">Daily mental workload [Thursday]</string>
    <string name="title_friday">Daily mental workload [Friday]</string>
    <string name="title_saturday">Daily mental workload [Saturday]</string>
    <string name="title_sunday">Daily mental workload [Sunday]</string>
    <string name="day_before">Day before</string>
    <string name="day_next">Next day</string>
    <string name="description_graph">Mental load level monitored during the day</string>

    <!-- Study -->
    <string name="title">My session of study</string>
    <string name="subtitle">Click the first button when you start studying. Make sure the Mindrove is turned on, your device is connected to its wifi and you are wearing it correctly. If for some reason you stop studying, click the button on the right to end your study session, and the Mindrove will stop acquiring data from you!</string>
    <string name="btn_start">Start session</string>
    <string name="btn_stop">Stop, I\'m tired</string>
    <string name="checkbox_notification">Let me advise you when to take a break.</string>
    <string name="checkbox_feedback">Let me help you improve the recommendations.</string>
    <string name="training_btn">Training button</string>
</resources>